# lab7

./: ConsoleApplication1.cpp  README.md
inc/: Func.hpp  SummOfElement.hpp  Writing.hpp
lab7/: CMakeLists.txt  итог.txt  файл.txt
lab7/inc/: NormaSort.hpp  SimpleNum.hpp  reading.hpp
lab7/src/: Func.cpp  SimpleNum.cpp  SummOfElements.cpp  Writing.cpp  reading.cpp
src/: NormaSort.cpp
